--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,34 @@
-/* body {
-  text-align: center;
-} */
+body {
+  min-height: 100% !important;
+}
 
+img {
+  height: 660px;
+  text-align: center;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.logo-text {
+  text-align: center;
+  font-size: x-large;
+  position: absolute;
+  top: 86%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+#home {
+  background-image: url('./images/nike01.jpg');
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
 .productContainer {
   display:flex;
